--- a/sass/blocks/_rota-overview-chart.sass
+++ b/sass/blocks/_rota-overview-chart.sass
@@ -49,7 +49,7 @@ $block: ".rota-overview-chart"
     opacity: 0 !important
 
   & .nvtooltip
-    z-index: 9999
+    z-index: 10000
     display: block
     padding: 20px 15px 15px
     border: none
@@ -59,7 +59,7 @@ $block: ".rota-overview-chart"
     box-shadow: 0 0 10px -1px rgba(0, 0, 0, .2)
 
   & .nvtooltip-pointer
-    z-index: 10000
+    z-index: 10001
     position: absolute
     display: block
 
